force-app/main/default/objects/AR_Charge_Code_GL_Account__c/fields/Charge_Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Code_Type__c</fullName>
    <formula>TEXT(Charge_Code__r.Charge_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment Nature</inlineHelpText>
    <label>Charge Code Type</label>
    <type>Text</type>
</CustomField>