force-app/main/default/objects/AR_Charge_Code_GL_Account__c/fields/Financial_Category__c.field-meta.xml
<CustomField>
    <fullName>Financial_Category__c</fullName>
    <label>Financial Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade receivable</fullName>
            </value>
            <value>
                <fullName>Customer Advances</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>