force-app/main/default/objects/AR_Charge_Code_GL_Account__c/fields/GL_Account_Yardi_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Yardi_Code__c</fullName>
    <formula>GL_Account__r.Yardi_GlCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Account Yardi Code</label>
    <type>Text</type>
</CustomField>