force-app/main/default/objects/AR_Charge_Code_GL_Account__c/fields/GL_Type__c.field-meta.xml
<CustomField>
    <fullName>GL_Type__c</fullName>
    <formula>Text (GL_Account__r.GL_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Type</label>
    <type>Text</type>
</CustomField>