force-app/main/default/objects/AR_Charge_Code_GL_Account__c/fields/Receivable_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Receivable_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receivable GL Account</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipLabel>Charge Code GL Accounts (Receivable GL Account)</relationshipLabel>
    <relationshipName>Charge_Code_GL_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>