force-app/main/default/objects/AR_Charge_Code_GL_Account__c/fields/Receivable_Yardi_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>Receivable_Yardi_GL_Code__c</fullName>
    <formula>GL_Account__r.AR_YardiGL_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receivable Yardi GL Code</label>
    <type>Text</type>
</CustomField>